--- a/apps/templates/homepage.html
+++ b/apps/templates/homepage.html
@@ -110,7 +110,7 @@
             <div class="dropdown-content">
                 <a href="requisition/create/">Create Requisition</a>
                 <a href="requisition/list/">Requisition List</a>
-                <a href="#">Work Order List</a>
+                <a href="workorder/list/">Work Order List</a>
             </div>
         </div>
         <div class="dropdown">
