--- a/apps/templates/issue_list.html
+++ b/apps/templates/issue_list.html
@@ -55,6 +55,8 @@
             <img src="/static/images/logo.png" alt="Logo">
         </div>
         </div>
+        <h1>Transaction list: 
+        </h1>
     {% if issues %}
         <table>
             <thead>
@@ -89,7 +91,7 @@
             </tbody>
         </table>
     {% else %}
-        <p class="empty-message">No issues found.</p>
+        <p class="empty-message">No Transactions found.</p>
     {% endif %}
 </body>
 </html>
