--- a/apps/templates/requisition_list.html
+++ b/apps/templates/requisition_list.html
@@ -56,6 +56,7 @@
             <img src="/static/images/logo.png" alt="Logo">
         </div>
         </div>
+    <h1>Requistion List</h1>
     {% if requisitions %}
     <table>
         <thead>
