--- a/apps/templates/store_executive.html
+++ b/apps/templates/store_executive.html
@@ -124,6 +124,28 @@
         .submit-button:hover {
             background-color: #45a049;
         }
+        .notification-button {
+  position: fixed;
+  top: 20px;
+  right: 70px;
+}
+
+.notification-button a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  line-height: 40px;
+}
+
+.notification-button img {
+  width: 80px;
+  height: 80px;
+  vertical-align: middle;
+}
     </style>
 </head>
 <body>
@@ -132,8 +154,15 @@
         <div class="logo">
             <img src="/static/images/logo.png" alt="Logo">
         </div>
+        <div class="notification-button">
+            <a href="{% url 'notifications' %}">
+                <img src="/static/images/notifications.png" alt="Notifications">
+            </a>
+        </div>
+        
     </div>
     <h1>Store Executive</h1>
+    <p>Approval Panel</p>
     {% if requisitions %}
         <table>
             <thead>
