--- a/apps/templates/store_executive.html
+++ b/apps/templates/store_executive.html
@@ -222,7 +222,12 @@
                     <a href="{% url 'store_balance_list' %}">Store Balance List</a>
                 </div>
             </li>
-            <li><a href="{% url 'purchase_list' %}">Purchase List</a></li>
+            <li class="dropdown"><a href="#">Purchase List</a>
+            <div class="dropdown-content">
+                <a href="{% url 'create_purchase' %}">Create Purchase</a>
+                <a href="{% url 'purchase_list' %}">Purchase List</a>
+            </div>
+        </li>
         </ul>
     </div>
     
