--- a/apps/templates/report.html
+++ b/apps/templates/report.html
@@ -242,6 +242,9 @@
                 <label for="requisition-qty">Requisition Qty:</label>
                 <input type="number" name="requisition_qty" id="requisition-qty" required>
                 <br>
+                <label for="requisition-date">Requisition date:</label>
+                <input type="date" name="requisition_date" id="requisition-date" required>
+                <br>
                 <br>
                 <button type="submit">Submit</button>
             </form>
