--- a/apps/templates/homepage.html
+++ b/apps/templates/homepage.html
@@ -137,7 +137,7 @@
     <div class="banner">
     <h1>Requisition Management System</h1>
     <h2>Welcome, {{ username }}!</h2>
-
+    <a href="{% url 'profile_details' %}" class="button">Profile</a>
     <div class="logo">
         <img src="/static/images/logo.png" alt="Logo">
     </div>
