--- a/apps/templates/administrations.html
+++ b/apps/templates/administrations.html
@@ -124,11 +124,35 @@
         .submit-button:hover {
             background-color: #45a049;
         }
+        .profile{
+        position: fixed;
+        top: 20px;
+        right: 70px;
+    }
+    .profile a {
+        display: block;
+        width: 40px;
+        height: 40px;
+        background-color: #fff;
+        border-radius: 50%;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        line-height: 40px;
+        }
+
+        .profile img {
+        width: 80px;
+        height: 80px;
+        vertical-align: middle;
+        }
     </style>
 </head>
 <body>
     <div class="banner">
         <h1>Requisition Management System</h1>
+        <div class="profile">
+            <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png" alt="Logo"></a>
+            </div>
         <div class="logo">
             <img src="/static/images/logo.png" alt="Logo">
         </div>
