--- a/apps/templates/store_executive.html
+++ b/apps/templates/store_executive.html
@@ -197,7 +197,27 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.profile{
+        position: fixed;
+        top: 20px;
+        right: 300px;
+    }
+    .profile a {
+        display: block;
+        width: 40px;
+        height: 40px;
+        background-color: #fff;
+        border-radius: 50%;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        line-height: 40px;
+        }
 
+        .profile img {
+        width: 80px;
+        height: 80px;
+        vertical-align: middle;
+        }
     </style>
 </head>
 <body>
@@ -206,6 +226,10 @@
         <div class="logo">
             <img src="/static/images/logo.png" alt="Logo">
         </div>
+        <div class="profile">
+            <a href="{% url 'profile_details' %}" ><img src="/static/images/profile.png" alt="Logo"></a>
+            </div>
+        
         <div class="notification-button">
             <a href="{% url 'notifications' %}">
                 <img src="/static/images/notifications.png" alt="Notifications">
