--- a/apps/templates/homepage.html
+++ b/apps/templates/homepage.html
@@ -188,7 +188,7 @@
         <div class="dropdown">
             <a href="#" class="button">Product</a>
             <div class="dropdown-content">
-                <a href="issue/create/">Products</a>
+                <a href="product_list/list/">Products</a>
                 <a href="{{store_balance_url}}">Store Balance</a>
             
             </div>
