--- a/apps/templates/create_issue.html
+++ b/apps/templates/create_issue.html
@@ -52,6 +52,25 @@
     form button[type="submit"]:hover {
         background-color: #45a049;
     }
+
+    .back-button-container {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .back-button {
+        background-color: #1f0202;
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    .back-button:hover {
+        background-color: #999;
+    }
 </style>
 </head>
 <body>
@@ -85,5 +104,8 @@
         <br>
         <button type="submit">Create</button>
     </form>
+    <div class="back-button-container">
+        <a href="{% url 'home_page' %}" class="back-button">Go back to home page</a>
+    </div>
 </body>
 </html>
