--- a/apps/templates/create_requisition.html
+++ b/apps/templates/create_requisition.html
@@ -4,13 +4,14 @@
     <title>Create Requisition</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
+            font-family: 'Segoe UI', sans-serif;
+            background-color: #f2f3f5;
+            
+            
         }
 
         h1 {
-            color: #333;
+            color: #5f2f02;
             text-align: center;
         }
 
@@ -18,13 +19,13 @@
             max-width: 400px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f5f5f5;
+            background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
 
         form input[type="text"], form textarea {
-            width: 100%;
+            width: 90%;
             padding: 10px;
             margin-bottom: 10px;
             border: 1px solid #ccc;
@@ -32,7 +33,7 @@
         }
 
         form button[type="submit"] {
-            background-color: #4CAF50;
+            background-color: #af4c65;
             color: #fff;
             padding: 10px 20px;
             border: none;
@@ -43,14 +44,37 @@
         form button[type="submit"]:hover {
             background-color: #45a049;
         }
+
+        .back-button-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .back-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #09c237;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .back-button:hover {
+            background-color: #07729c;
+        }
     </style>
 </head>
 <body>
-    <h1>Create Requisition</h1>
+    <h1>CREATE REQUISITION</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Create</button>
     </form>
+    <div class="back-button-container">
+        <a href="{% url 'home_page' %}" class="back-button">Go back to home page</a>
+    </div>
 </body>
 </html>
