--- a/apps/templates/login.html
+++ b/apps/templates/login.html
@@ -4,17 +4,18 @@
     <title>Login</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            font-family: 'Segoe UI', sans-serif;
+            background-color: #F2F3F5;
         }
         
         .login-container {
             width: 300px;
+            height: 380px;
             margin: 0 auto;
             background-color: #fff;
-            padding: 20px;
+            padding: 50px;
             border: 1px solid #ddd;
-            border-radius: 5px;
+            border-radius: 10px;
             margin-top: 100px;
         }
         
@@ -34,13 +35,13 @@
         
         .form-group input {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             border: 1px solid #ccc;
             border-radius: 3px;
         }
         
         .btn-primary {
-            background-color: #007bff;
+            background-color: #1877F2;
             color: #fff;
             padding: 8px 16px;
             border: none;
@@ -51,10 +52,23 @@
         .btn-primary:hover {
             background-color: #0069d9;
         }
+
+        .logo-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .logo-image {
+            max-width: 250px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
     <div class="login-container">
+        <div class="logo-container">
+            <img src="/static/images/logo.png" alt="Logo" class="logo-image">
+        </div>
         <h2>Login</h2>
         <form method="post">
             {% csrf_token %}
