--- a/apps/templates/requisition_list.html
+++ b/apps/templates/requisition_list.html
@@ -4,7 +4,7 @@
     <title>Requisition List</title>
     <style>
         body{
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI', sans-serif;
         }
         table {
             border-collapse: collapse;
@@ -60,6 +60,19 @@
             border: none;
             cursor: pointer;
         }
+        .view-report-link {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #4CAF50;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.view-report-link:hover {
+    background-color: #45a049;
+}
+
     </style>
 </head>
 <body>
@@ -98,8 +111,10 @@
                         <td>{{ requisition.requisition_no }}</td>
                         <td>{{ requisition.remark }}</td>
                         <td>{{ requisition.get_approval_status_display }}</td>
-                        <td><a href="{% url 'report' requisition.requisition_no %}" target="_blank">View Report</a></td>
-                    </tr>
+                        <td>
+                            <a href="{% url 'report' requisition.requisition_no %}" target="_blank" class="view-report-link">View Report</a>
+                        </td>
+                         </tr>
                 {% endfor %}
             </tbody>
         </table>
