--- a/apps/templates/store_balance_list.html
+++ b/apps/templates/store_balance_list.html
@@ -22,6 +22,16 @@
             text-align: center;
         }
         
+        .logo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        
+        .logo img {
+            max-width: 150px;
+            height: auto;
+        }
+        
         table {
             width: 100%;
             border-collapse: collapse;
@@ -45,6 +55,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="logo">
+            <img src="/static/images/logo.png" alt="Logo">
+        </div>
         <h1>Store Balance List</h1>
         <table>
             <thead>
