--- a/apps/templates/purchase_list.html
+++ b/apps/templates/purchase_list.html
@@ -10,8 +10,12 @@
         }
 
         h1 {
-            color: #333;
+            color: #a10404;
             text-align: center;
+            position: absolute;
+            font-size: 45px;
+            top:10px;
+            left:700px;
         }
 
         table {
@@ -44,9 +48,22 @@
             border: none;
             cursor: pointer;
         }
+
+        .logo {
+            text-align: left;
+            margin-bottom: 20px;
+        }
+
+        .logo img {
+            max-width: 250px;
+            height: auto;
+        }
     </style>
 </head>
 <body>
+    <div class="logo">
+        <img src="/static/images/logo.png" alt="Logo">
+    </div>
     <h1>Purchase List</h1>
     <div class="filter-form">
         <form method="GET">
