--- a/apps/templates/homepage.html
+++ b/apps/templates/homepage.html
@@ -21,13 +21,14 @@
             background-position: bottom;
             background-repeat: no-repeat;
             text-align: center;
+           
         }
         
         .button {
-            box-shadow: 5px 5px #888888;
+            box-shadow: 5px 5px #6d6c6c;
             display: inline-block;
             padding: 10px 40px;
-            background-color: #5b0583;
+            background-color: #02be02;
             color: #fff;
             font-size: 18px;
             font-weight: bold;
