--- a/apps/templates/store_executive.html
+++ b/apps/templates/store_executive.html
@@ -142,8 +142,8 @@
 }
 
 .notification-button img {
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
   vertical-align: middle;
 }
 .navigation {
@@ -234,6 +234,8 @@
             <a href="{% url 'notifications' %}">
                 <img src="/static/images/notifications.png" alt="Notifications">
             </a>
+            <br>
+            <p>Notifications</p>
         </div>
         
     </div>
